# LucAstra

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  MVP_CHECKLIST.md  README.md  RELEASE_SUMMARY.md  clippy_output.txt
.cargo/: config.toml
.github/workflows/: ci.yml
app/: Cargo.toml
app/benches/: llm_benchmarks.rs
app/examples/: tool_demo.rs
app/src/: lib.rs  main.rs  metrics.rs  observability.rs
app/tests/: host_file_access_tests.rs  integration_tests.rs  rag_pipeline_tests.rs
apps/browser/: Cargo.toml
apps/browser/src/: lib.rs  main.rs
apps/calculator/: Cargo.toml
apps/calculator/src/: lib.rs  main.rs
apps/file-manager/: Cargo.toml
apps/file-manager/src/: lib.rs  main.rs
cli/: Cargo.toml
cli/src/: main.rs
compat/: Cargo.toml
compat/src/: lib.rs  libreoffice.rs  loader.rs  syscall.rs
config/: Cargo.toml
config/src/: lib.rs  observability.rs
core/: Cargo.toml
core/src/: command.rs  device.rs  error.rs  input.rs  lib.rs
db/: Cargo.toml
db/src/: lib.rs
devices/: Cargo.toml
devices/src/: lib.rs
docs/: CHANGELOG.md  CONFIG_SCHEMA.md  GUI_TOOLS_GUIDE.md  MVP_SUMMARY.md  OS_ARCHITECTURE.md  PHASE6_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  RELEASE_NOTES.md  V1_0_ROADMAP.md  V1_1_RELEASE.md  V1_1_ROADMAP.md
docs/examples/: v1_1_async_llm.rs
docs/examples/configs/: anthropic.json  dev.json  llamafile-local.json  minimal.json  openai.json  prod.json
fs/: Cargo.toml
fs/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
hal/: Cargo.toml
hal/src/: block.rs  filesystem.rs  input.rs  lib.rs
input/: Cargo.toml
input/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: lib.rs
llm/: Cargo.toml
llm/src/: cache.rs  client.rs  conversation.rs  inference.rs  lib.rs  rate_limit.rs  streaming.rs
llm/src/providers/: anthropic.rs  llamafile.rs  mod.rs  openai.rs
packaging/: build-deb.sh  build-msi.ps1  lucastra.wxs
search/: Cargo.toml
search/src/: index.rs  lib.rs  tokenizer.rs  vector.rs
services/: Cargo.toml
services/src/: lib.rs
tools/: Cargo.toml
tools/src/: file_access.rs  install.rs  lib.rs  read.rs  search.rs
