[workspace]
members = ["kernel", "services", "core", "db", "gui", "hal", "devices", "fs", "input", "compat", "llm", "search", "app", "tools"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
repository = "https://github.com/ColonelToad/LucAstra"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
