[package]
name = "lucastra-gui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
iced = { version = "0.12", default-features = true, features = ["wgpu", "canvas"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lucastra-services = { path = "../services" }
lucastra-db = { path = "../db" }
