[package]
name = "lucastra-llm"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
lucastra-core = { path = "../core" }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
async-stream = "0.3"
futures = "0.3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[features]
default = []
openai = []
anthropic = []
