[package]
name = "lucastra-file-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
thiserror = "1.0"

[lib]
name = "lucastra_file_manager"
path = "src/lib.rs"

[[bin]]
name = "file-manager"
path = "src/main.rs"
